--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_test_path(@tweet) %> |
+<p> <%= @tweet.text %> </p>
+
+<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweet_path %>
