--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,80 +1,6 @@
-
 <div class="container">
 	<div class="row">
-  		<div class="col-sm-2">
-  		<div class="list-group">
-			<a href="#" class="list-group-item active">
-			Current trends
-			</a>
-		  <a href="#" class="list-group-item">#tweet1</a>
-		  <a href="#" class="list-group-item">#tweet2</a>
-		  <a href="#" class="list-group-item">#tweet3</a>
-		  <a href="#" class="list-group-item">#tweet4</a>
+		<div id="canvas">
 		</div>
-
-  		</div> 
-  		
-  		<div class="col-sm-5">
-  		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">tweets per day</h3>
-			</div>
-	  		<div id="trend" class="panel-body">
-	    		draw the plots of trend
-	  		</div>
-		</div>
-  		</div>
-  		<div class="col-sm-5">
-  		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Heat Map of Globe</h3>
-			</div>
-	  		<div id="heatmap" class="panel-body">
-	    		draw the heatmap
-	  		</div>
-		</div>
-  		</div>
-	</div>
-
-<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
-	<div class="row">
-  		<div class="col-xs-24 col-sm-12">
-  			<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">trellis view of network</h3>
-			</div>
-	  		<div class="panel-body">
-	    		<table class="table table-striped table-bordered">
-		  	  
-			<tr>
-			<th>Day 1</th>
-			<th>Day 2</th>
-			<th>Day 3</th>
-			<th>Day 4</th>
-			<th>Day 5</th>
-			<th>Day 6</th>
-			</tr>
-			<tr>
-			<td>row 1, cell 1</td>
-			<td>row 1, cell 2</td>
-			<td>row 1, cell 3</td>
-			<td>row 1, cell 4</td>
-			<td>row 1, cell 5</td>
-			<td>row 1, cell 6</td>
-			</tr>
-			<tr>
-			<td>row 2, cell 1</td>
-			<td>row 2, cell 2</td>
-			<td>row 2, cell 3</td>
-			<td>row 2, cell 4</td>
-			<td>row 2, cell 5</td>
-			<td>row 2, cell 6</td>
-			</tr>
-		  	  
-		  </table>
-	  		</div>
-			</div>
-		  
-  		</div> <!-- end of column -->
 	</div> <!-- end of 2nd row -->
 </div> <!-- end of container -->
