--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
 	<div class="row">
-		<div id="canvas">
-		</div>
+		 
+			<h3> Show the data from <span id="slider3text"></span> </h3>
+			<div id="slider"></div>
+			<div id="canvas">
+			</div>
+		
 	</div> <!-- end of 2nd row -->
 </div> <!-- end of container -->
