--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,11 @@
 <div class="container">
+	<div id="slider-range"></div>
+
+	<p>
+	  <label for="amount">Target sales goal (Millions):</label>
+	  <input type="text" id="amount" style="border: 0; color: #f6931f; font-weight: bold;" />
+	</p>
+
 	<div class="row">
 		<div id="canvas">
 		</div>
