Adds basic jquery UI Slider

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -3,3 +3,21 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 svg
 	border: 1px solid
+	
+#canvas
+	float: left
+
+#tweet-details
+	border: 1px solid
+	width: 200px
+	min-height: 200px
+	float: right
+
+.node
+	cursor: move
+	fill: #ccc
+	stroke: #000
+	stroke-width: 1.5px
+
+.node.selected
+	fill: #f00
