--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,8 @@
 <div class="container">
-	<div id="slider-range"></div>
-
-	<p>
-	  <label for="amount">Target sales goal (Millions):</label>
-	  <input type="text" id="amount" style="border: 0; color: #f6931f; font-weight: bold;" />
-	</p>
 
 	<div class="row">
-		 
-			<h3> Show the data from <span id="slider3text"></span> </h3>
 			<div id="slider"></div>
-			<div id="canvas">
-			</div>
-		
+			<div id="canvas"></div>
+			<div id="tweet-details"></div>
 	</div> <!-- end of 2nd row -->
 </div> <!-- end of container -->
