Adds link styles and properties to graph.json

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -2,22 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 svg
-	border: 1px solid
-	
+    border: 1px solid
+    
 #canvas
-	float: left
+    float: left
 
 #tweet-details
-	border: 1px solid
-	width: 200px
-	min-height: 200px
-	float: right
+    border: 1px solid
+    width: 200px
+    min-height: 200px
+    float: right
 
 .node
-	cursor: move
-	fill: #ccc
-	stroke: #000
-	stroke-width: 1.5px
+    cursor: crosshair
+    fill: #ccc
+    stroke: #000
+    stroke-width: 1.5px
 
 .node.selected
-	fill: #f00
+    fill: #f00
+
+.link
+    stroke: #000
+    stroke-width: 1.5px
