--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,6 @@
 	<div class="row">
 			<div id="slider"></div>
 			<div id="canvas"></div>
-			<div id="tweet-details"></div>
+			<div id="tweet-details"><div id="created-at"></div></div>
 	</div> <!-- end of 2nd row -->
 </div> <!-- end of container -->
