--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,17 @@
-<div class="container">
-
-	<div class="row">
-			<div id="slider"></div>
+<div id="paneCenter" class="ui-layout-center">
+	<div class="container">
+		<div class="row">
+			<h3>
+               Make tweets visible from <span id="slider-value" class="range-value"></span>
+            </h3>
+			<div id="slider" class='g-slider'></div>
 			<div id="canvas"></div>
-			<div id="tweet-details"></div>
-	</div> <!-- end of 2nd row -->
-</div> <!-- end of container -->
+			<div id="scrollbar"></div>	
+		</div> <!-- end of 2nd row -->
+	</div> <!-- end of container -->
+</div>
+
+<div id="paneEast" class="ui-layout-east"> 
+	<h3>Tweet Information Pane</h3>
+	<div id="tweet-details"></div>
+</div>
