--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,5 +13,10 @@
 
 <div id="paneEast" class="ui-layout-east"> 
 	<h3>Tweet Information Pane</h3>
-	<div id="tweet-details"></div>
+	<div id="tweet-details">
+		<div id="text"> </div>
+		<div id="time"> </div>
+		<div id="retweet"> </div>
+		<div id="tweetid"> </div>
+	</div>
 </div>
