--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,6 +12,11 @@
 </div>
 
 <div id="paneEast" class="ui-layout-east"> 
+	<div id="nodecontrol">
+		<form>
+			<input type="checkbox" id="nodetype">Singletone<br>
+		</form>
+	</div>
 	<h3>Tweet Information Pane</h3>
 	<div id="tweet-details">
 		<div id="text"> </div>
