--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,6 +15,8 @@
 	<div id="nodecontrol">
 		<form>
 			<input type="checkbox" id="nodetype">Singletone<br>
+			<input type="radio" id="show" class="action-group" name="action-group" value="show"> Show
+			<input type="radio" id="hide" class="action-group" name="action-group" value="hide">Hide
 		</form>
 	</div>
 	<h3>Tweet Information Pane</h3>
