Updates some layout for tweet details pane

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -9,9 +9,12 @@ svg
 
 #tweet-details
     border: 1px solid
-    width: 200px
     min-height: 200px
     float: right
+
+    .label
+        font-weight: bold
+        color: inherit
 
 .node
     cursor: crosshair
