--- a/app/views/welcome/_tweet_info.html.erb
+++ b/app/views/welcome/_tweet_info.html.erb
@@ -1,16 +1,19 @@
 <h3>Tweet Details</h3>
 <div id="tweet-details">
 	<p>
-        <span class="label">Tweet: </span> <span id="text"></span>
-    </p>
+    <span class="label">Tweet: </span> <span id="text"></span>
+  </p>
+  <p>
+    <span class="label">Day: </span> <span id="day"></span>
+  </p>
 	<p>
-        <span class="label">Time: </span> <span id="time"></span>
-    </p>
+    <span class="label">Time: </span> <span id="time"></span>
+  </p>
 	<p> 
-        <span class="label">Retweet?: </span> <span id="retweet"></span>
-    </p>
+    <span class="label">Retweet?: </span> <span id="retweet"></span>
+  </p>
 	
-    <p>
-        <span class="label">Id: </span> <span id="tweetid"></span>
-    </p>
+  <p>
+    <span class="label">Id: </span> <span id="tweetid"></span>
+  </p>
 </div>
