--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -25,6 +25,10 @@ svg
 .node.selected
     fill: #f00
 
+.node.hovered
+    fill: #0f0
+    stroke: #f00
+
 .link
     stroke: #000
     stroke-width: 1.5px
