--- a/app/views/welcome/_tweet_info.html.erb
+++ b/app/views/welcome/_tweet_info.html.erb
@@ -1,21 +1,14 @@
 <h3>Tweet Details</h3>
 <div id="tweet-details">
-	<p>
-    <span class="label">Tweet: </span> <span id="text"></span>
-  </p>
-  <p>
-    <span class="label">Day: </span> <span id="day"></span>
-  </p>
-	<p>
-    <span class="label">Time: </span> <span id="time"></span>
-  </p>
-	<p> 
-    <span class="label">Retweet?: </span> <span id="retweet"></span>
-  </p>
-	
-  <p>
-    <span class="label">Id: </span> <span id="tweetid"></span>
-  </p>
-  <p> <span class="label">Replied to:</span><span id="replyid"></span></p>
+	<p> <span class="label">Tweet: </span> <span id="tweet-details-text"></span> </p>
 
+  <p> <span class="label">Day: </span> <span id="tweet-details-day"></span> </p>
+
+	<p> <span class="label">Time: </span> <span id="tweet-details-time"></span> </p>
+
+  <p> <span class="label">Retweet?: </span> <span id="tweet-details-retweet"></span> </p>
+	
+  <p> <span class="label">Id: </span> <span id="tweet-details-id"></span> </p>
+
+  <p> <span class="label">Replied to:</span><span id="tweet-details-replyto-id"></span></p>
 </div>
