--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -21,9 +21,11 @@ svg
     fill: #ccc
     stroke: #000
     stroke-width: 1.5px
+    z-index: 10
 
 .node.selected
     fill: #f00
+    z-index: 100
 
 .node.hovered
     fill: #0f0
