control panel moved

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -9,8 +9,21 @@ svg
 
 #tweet-details
     border: 1px solid
-    min-height: 200px
-    float: right
+    min-height: 180px
+    min-width: 230px
+    background-color: white
+    float: left
+
+    .label
+        font-weight: bold
+        color: inherit
+
+#user-details
+    border: 1px solid
+    min-height: 100px
+    min-width: 230px
+    background-color: white
+    float: left
 
     .label
         font-weight: bold
