--- a/app/views/welcome/_tweet_info.html.erb
+++ b/app/views/welcome/_tweet_info.html.erb
@@ -1,4 +1,4 @@
-<h3>Tweet Details</h3>
+<h4 style='background-color:#D8D8D8;'>Tweet Details</h4>
 <div id="tweet-details">
 	<p> <span class="label">Tweet: </span> <span id="tweet-details-text"></span> </p>
 
