just pushing to see if anything is missing

--- a/app/views/welcome/_user_info.html.erb
+++ b/app/views/welcome/_user_info.html.erb
@@ -7,5 +7,6 @@
   <p> <span class="label">Number of Followers: </span> <span id="user-details-followers"></span> </p>
 
   <p> <span class="label">Number of Friends: </span> <span id="user-details-friends"></span> </p>
-  
+  <p> <span class="label">Location: </span> <span id="user-details-location"></span> </p>
+  <p> <span class="label">Description: </span> <span id="user-details-description"></span> </p>
 </div>
