--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -47,3 +47,8 @@ svg
 .link
     stroke: #000
     stroke-width: 1.5px
+
+.brush .extent
+    stroke: #fff
+    fill-opacity: 0.125
+    shape-rendering: crispEdges
