--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,8 @@
+
 <div id="paneNorth" class="ui-layout-north">
-  
+<div class="page-header">
+ <h1>Twitter Trendfinder: Visualization and analysis of Twitter trends</h1>
+</div>
   <div id="edgecontrol" style='float: left'>
     <form>
       <label><input type="checkbox" id="nodetype">Tweets with Edges:<br></label>
