Removes id from tweet details. Adds in_reply_chain and in_retweet_chain boolean to json data

--- a/app/views/welcome/_tweet_info.html.erb
+++ b/app/views/welcome/_tweet_info.html.erb
@@ -1,14 +1,17 @@
 <h4 style='background-color:#D8D8D8;'>Tweet Details</h4>
 <div id="tweet-details">
-	<p> <span class="label">Tweet: </span> <span id="tweet-details-text"></span> </p>
+  <p> <span class="label">Tweet: </span> <span id="tweet-details-text"></span> </p>
 
   <p> <span class="label">Day: </span> <span id="tweet-details-day"></span> </p>
 
-	<p> <span class="label">Time: </span> <span id="tweet-details-time"></span> </p>
+  <p> <span class="label">Time: </span> <span id="tweet-details-time"></span> </p>
 
   <p> <span class="label">Retweet?: </span> <span id="tweet-details-retweet"></span> </p>
-	
-  <p> <span class="label">Id: </span> <span id="tweet-details-id"></span> </p>
 
   <p> <span class="label">Replied to:</span><span id="tweet-details-replyto-id"></span></p>
+
+  <p><span class="label">In Reply Chain:</span><span id="tweet-details-in-reply-chain"></span></p>
+
+  <p><span class="label">In Retweet Chain:</span><span id="tweet-details-in-retweet-chain"></span></p>
+
 </div>
