Adds top user panel and support for it

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -49,8 +49,8 @@ path.histogram
     z-index: 100
 
 .node.hovered
-    // opacity: 0.9
-    // stroke: #CCC
+//    stroke: #000
+//    fill: black
 
 .link
     stroke: #000
@@ -60,3 +60,15 @@ path.histogram
     stroke: #fff
     fill-opacity: 0.125
     shape-rendering: crispEdges
+
+#top-tweet-list
+
+.top-tweet-item
+    &:hover
+        color: red
+
+.top-tweet-text
+    font-style: italic
+
+.top-tweet-user-name
+    font-weight: bold
