--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -78,20 +78,11 @@
   </div> -->
 
   <div>
-  <ul style="list-style-type: none; padding: 0px; margin: 0px">
-  <li><div>  <%= render 'tweet_info' %> </div></li>
-  <!-- <span class="separator" style="VISIBILITY:hidden;"> | </span> -->
-  
-  <li><div>  <%= render 'user_info' %> </div></li>
-  
-  <li>
-    <h4 id="topic" style='background-color:#D8D8D8;'>Select Topic</h4>
-    <div>
-      
-    </div>
-  </li>
-  
-  </ul>
+    <ul style="list-style-type: none; padding: 0px; margin: 0px">
+      <li><div> <%= render 'tweet_info' %> </div></li>
+      <li><div> <%= render 'user_info' %> </div></li>
+      <li><div> <%= render 'top_tweets_info' %></div></li>
+    </ul>
   </div>
 
 </div>
