change axis style

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -5,7 +5,14 @@ svg
     border: 1px solid
 
 path
-    fill: #ccc
+    fill: none
+    stroke: #000
+    shape-rendering: crispEdges
+
+
+line
+    stroke: #000
+    
 
 path.histogram
     fill: steelBlue
